# modemd

./: CMakeLists.txt  Doxyfile  Makefile  README  TODO  conf.c  conf.h  hardware.c  hardware.h  lattice.c  lattice.h  main.c  mc7700.c  mc7700.h  modem.h  modemd.mak  queue.c  queue.h  thread.c  thread.h
cellulard_cli/: Makefile  main.c
cli/: CMakeLists.txt  Makefile  main.c
include/modem/: modem.h  modem_errno.h  modem_str.h  types.h
lib/: CMakeLists.txt  Makefile  libcellulard.c  log.c  log.h  modem.c  modem_int.c  modem_int.h  modem_str.c  rpc.c  rpc.h  utils.c  utils.h
lib/include/modem/: modem.h  modem_str.h  types.h
libcellulard/: libcellulard.c
source/libmodem/: CMakeLists.txt  Makefile  modem.c  modem_db.c  modem_db.h  modem_info.c  modem_info.h  modem_int.c  modem_str.c  queue.c  queue.h  rpc.c  rpc.h
source/libmodem/at/: Makefile  at_common.c  at_common.h  at_query.c  at_query.h  at_queue.c  at_queue.h  at_utils.c
source/libmodem/hw/: Makefile  hw_c1kmbr.c  hw_c1kmbr.h  hw_common.c  hw_common.h
source/libmodem/modems/: Makefile  modem_conf.c  modem_conf.h  registration.c  registration.h
source/libmodem/modems/e1550/: Makefile  README.txt  at_func.c  at_func.h
source/libmodem/modems/mc77x0/: Makefile  at_func.c  at_func.h  func.c  func.h  registration.c
source/libmodem/proto/: Makefile  proto.c  proto.h
source/libmodem/proto/at/: Makefile  at_common.c  at_common.h  at_query.c  at_query.h  at_queue.c  at_queue.h  at_utils.c  at_utils.h
source/libmodem/proto/qcqmi/: Makefile  qcqmi_common.c  qcqmi_common.h  qcqmi_queue.c  qcqmi_queue.h
source/libmodem/qcqmi/: Makefile  qcqmi_queue.c  qcqmi_queue.h
source/libmodem/utils/: Makefile  event.c  event.h  file.c  file.h  pdu.c  pdu.h  re.c  re.h  str.c  str.h  sysfs.c  sysfs.h
source/modemd/: CMakeLists.txt  Makefile  conf.c  conf.h  main.c  thread.c  thread.h
source/modemd_cli/: CMakeLists.txt  Makefile  main.c
